--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "portofolio",
-  "homepage": "https://rissss21.github.io/portofolio",
+  "name": "portfolio",
+  "homepage": "https://izzulroslan.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp dist/index.html dist/404.html",
+    "build": "vite build && node -e \"require('fs').copyFileSync('dist/index.html','dist/404.html')\"",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -18,7 +19,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
-    "firebase": "^12.1.0",
+    "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "meshline": "^3.3.1",
     "motion": "^12.23.12",
